<!DOCTYPE resources [<!ENTITY serverIP "10.0.2.2">]>

<resources>
    <string name="app_name">FuelComparison</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Labels -->
    <string name="login">Zaloguj się</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="createAccountLabel">Stwórz konto!</string>
    <string name="register">Zarejestruj się</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="confirmPassword">Potwierdź hasło</string>
    <string name="loginToAccountLabel">Zaloguj się na konto!</string>
    <string name="gasStationName">Nazwa</string>
    <string name="gasStationStreet">Ulica</string>
    <string name="gasStationCity">Miasto</string>
    <string name="latitude">Szerokość geograficzna</string>
    <string name="longitude">Długość geograficzna</string>
    <string name="gasStationOpeningOursFrom">Otwarte od</string>
    <string name="gasStationOpeningOursTo">Otwarte do</string>
    <string name="petrol95">Benzyna 95</string>
    <string name="petrol98">Benzyna 98</string>
    <string name="dieselFuel">Diesel</string>
    <string name="naturalGas">Gaz ziemny</string>
    <string name="favourite">Ulubiona</string>
    <string name="isForDisabledPeople">Udogodnienia dla niepełnosprawnych</string>
    <string name="isForElectricCars">Ładowanie elektrycznych pojazdów</string>
    <string name="availablePetrol">Dostępne rodzaje paliw:</string>
    <string name="facilities">Obiekty:</string>
    <string name="opinions">Wpisz swoją opinię:</string>
    <string name="filterDistance">Promień wyszukiwania w km:</string>
    <string name="filterPrice">Maksymalna cena:</string>
    <string name="filterFuels">Szukane paliwa:</string>
    <string name="filterSpecial">Specjalne:</string>
    <string name="activeUsers">Aktywni użytkownicy:</string>
    <string name="blockedUsers">Zablokowani użytkownicy:</string>

    <!--Buttons Labels-->
    <string name="loginButtonText">ZALOGUJ SIĘ</string>
    <string name="registerButtonText">ZAREJESTRUJ SIĘ</string>
    <string name="addGasStation">DODAJ STACJĘ</string>
    <string name="comment_button">ZATWIERDŹ</string>
    <string name="stationFilterButtonText">SZUKAJ NAJLEPSZEJ STACJI</string>
    <string name="unlockUserButtonText">ZMIEń STATUS UŻYTKOWNIKA</string>

    <!--Toast Messages-->
    <string name="connectionTimeout">Czas połączenia był zbyt długi.</string>
    <string name="passwordsDontMatch">Podane hasła nie są takie same!</string>
    <string name="emptyDataProvided">Nie wprowadzono wszystkich wymaganych danych.</string>
    <string name="registerDataIncorrect">Nieprawidłowe dane. Spróbuj ponownie.</string>
    <string name="usernameOrEmailTaken">Podana nazwa użytkownika jest już zajęta. Spróbuj użyć innej.</string>
    <string name="userIdConfirmText">Proszę zapamiętaj swoje id:</string>
    <string name="loginDataIncorrect">Niepoprawne dane logowania.Spróbuj ponownie.</string>
    <string name="succesfulkRegistration">Twoje konto zostało utworzone.</string>
    <string name="addGasStationError">Nie można dodać stacji. Pojawił się nieznany błąd.</string>
    <string name="addedGasStationSuccessful">Pomyślnie dodano stację paliw.</string>
    <string name="comment_hint">Moja opinia...</string>
    <string name="newFuelPrice">Nowa cena paliwa</string>
    <string name="addNewFuelPriceButtonText">Dodaj nową cenę paliwa</string>
    <string name="confirmFuelPriceButtonText">Potwierdź cenę paliwa</string>
    <string name="writeFuelPrice">Cena paliwa nie może być pusta</string>
    <string name="commentAdded">Komentarz został dodany</string>
    <string name="commentAddedFail">Błąd przy dodawaniu komentarza</string>
    <string name="fuelPriceSaved">Cena paliwa została pomyślnie dodana.</string>
    <string name="fuelPriceSaveError">Błąd przy dodawaniu ceny paliwa</string>
    <string name="unlockUserDataIncorrect">Niepoprawne dane odblokowywanego użytkownika</string>
    <string name="userUnlocked">Wybrany użytkownik został odblokowany.</string>
    <string name="userBlocked">Wybrany użytkownik został zablokowany.</string>
    <string name="agentId">Agent ID</string>

    <!--Navigation Menu-->
    <string name="navigation_drawer_open">Otwieranie nawigacji</string>
    <string name="navigation_drawer_close">Zamykanie nawigacji</string>
    <string name="mapFragment">Mapa</string>
    <string name="favouriteStations">Ulubione stacje</string>
    <string name="unlockUsers">Zarządzaj dostępem</string>
    <string name="logout">Wyloguj się</string>

    <!--URLs-->
    <string name="loginUrl">http://10.0.2.2:8000/login</string>
    <string name="registerUrl">http://10.0.2.2:8000/register</string>
    <string name="retrieveStationsUrl">http://10.0.2.2:8000/retrieveStations</string>
    <string name="addStationUrl">http://10.0.2.2:8000/addStation</string>
    <string name="retrieveStationFuels">http://10.0.2.2:8000/getFuels</string>
    <string name="retrieveStationComments">http://10.0.2.2:8000/getComments</string>
    <string name="retrievePaymentMethods">http://10.0.2.2:8000/getPaymentMethods</string>
    <string name="fuelPriceUrl">http://10.0.2.2:8000/addFuelPrice</string>
    <string name="confirmStationUrl">http://10.0.2.2:8000/confirmStation</string>
    <string name="addCommentUrl">http://10.0.2.2:8000/addComment</string>
    <string name="retrieveFavouriteStations">http://10.0.2.2:8000/getFavouriteStations</string>
    <string name="toggleGasStationFavourite">http://10.0.2.2:8000/toggleGasStationFavourite</string>
    <string name="unlockUserUrl">http://10.0.2.2:8000/unlockUser</string>
    <string name="retrieveAllUsers">http://10.0.2.2:8000/getAllUsers</string>

    <!--Tags-->
    <string name="mapFragmentTag">MAP_FRAGMENT</string>
    <string name="favStationsFragmentTag">FAV_STATIONS_FRAGMENT</string>
    <string name="unlockUsersFragmentTag">UNLOCK_USERS_FRAGMENT</string>

    <!--Filters-->
    <string name="defaultFuelPrice">5</string>
    <string name="defaultDistance">10</string>

</resources>
