<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fuelPriceDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newFuelPrice"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/newFuelPrice"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/addNewFuelPriceButton"
            style="@style/ButtonAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space10"
            android:text="@string/addNewFuelPriceButtonText" />

        <Button
            android:id="@+id/confirmFuelPriceButton"
            style="@style/ButtonAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmFuelPriceButtonText" />

    </LinearLayout>
</ScrollView>