<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContactLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".fragments.UnlockUsersFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/space10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activeUsersHeader"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activeUsers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activeUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/blockedUsersHeader"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20"
                android:text="@string/blockedUsers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/blockedUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/agentId"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/agentId"
                android:inputType="number" />

            <Button
                android:id="@+id/unlockUserButton"
                style="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space10"
                android:text="@string/unlockUserButtonText" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>