<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <Button-->
<!--                    android:id="@+id/confirmStation"-->
<!--                    android:layout_width="@android:dimen/app_icon_size"-->
<!--                    android:layout_height="@android:dimen/app_icon_size"-->
<!--                    android:background="@android:drawable/btn_star_big_on"-->
<!--                    android:onClick="confirmStationClick" />-->

<!--                <Button-->
<!--                    android:id="@+id/navigationButton"-->
<!--                    android:layout_width="48dp"-->
<!--                    android:layout_height="48dp"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:background="@drawable/ic_navigation" />-->

<!--            </RelativeLayout>-->

            <TextView
                android:id="@+id/gasStationAddress"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gasStationOpeningHours"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/space5"
                android:background="@color/colorDivider" />

            <TextView
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availablePetrol" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gasStationFuels"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/space5"
                android:background="@color/colorDivider" />

<!--            <TextView-->
<!--                style="@style/h1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/paymentMethods" />-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/gasStationPaymentMethods"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_margin="@dimen/space5"-->
<!--                android:background="@color/colorDivider" />-->

            <TextView
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facilities" />

            <CheckBox
                android:id="@+id/isGasStationForDisabledPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/isForDisabledPeople" />

            <CheckBox
                android:id="@+id/isGasStationForElectricCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/isForElectricCars" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/space5"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opinions"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gasStationOpinions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false" />
            <!--                android:layout_height="40dp"-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>
